--- a/src/makefile
+++ b/src/makefile
@@ -1,12 +1,15 @@
 CC=g++
-CFLAGS= -std=c++11 -Wall -Wextra
+CFLAS = -std=c++11 -Wall -Wextra
 default: pasians-cli
 
-paslib.o: paslib.cc paslib.h
-	$(CC) $(CFLAGS) paslib.cc -c -o paslib.o
+json.o: jsoncpp.cpp
+	$(CC) $^ -c -o $@
 
-pasians-cli: paslib.o pasians-cli.cc pasians-cli.h
-	$(CC) $(CFLAGS) pasians-cli.cc paslib.o -o pasians-cli
+paslib.o: paslib.cc
+	$(CC) $^ -c -o $@
+
+pasians-cli: paslib.o json.o pasians-cli.cc
+	$(CC) $(CFLAGS) $^ -o $@
 
 clean:
 	rm -f paslib.o pasians-cli
