--- a/src/makefile
+++ b/src/makefile
@@ -1,12 +1,12 @@
 CC=g++
-CFLAS = -std=c++11 -Wall -Wextra
+CFLAGS = -std=c++11 -Wall -Wextra
 default: pasians-cli
 
 json.o: jsoncpp.cpp
-	$(CC) $^ -c -o $@
+	$(CC) $(CFLAGS) $^ -c -o $@
 
 paslib.o: paslib.cc
-	$(CC) $^ -c -o $@
+	$(CC) $(CFLAGS) $^ -c -o $@
 
 pasians-cli: paslib.o json.o pasians-cli.cc
 	$(CC) $(CFLAGS) $^ -o $@
