--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,7 @@
 CC=g++
 CFLAGS = -std=c++11 -Wall -Wextra -O0 -g
-default: hra2017-cli
+TARGET = ../hra2017-cli
+default: $(TARGET)
 
 json.o: jsoncpp.cpp
 	$(CC) $(CFLAGS) $^ -c -o $@
@@ -8,8 +9,8 @@ json.o: jsoncpp.cpp
 paslib.o: paslib.cc
 	$(CC) $(CFLAGS) $^ -c -o $@
 
-hra2017-cli: paslib.o json.o pasians-cli.cc
+$(TARGET): paslib.o json.o pasians-cli.cc
 	$(CC) $(CFLAGS) $^ -o $@
 
 clean:
-	rm -f paslib.o hra2017-cli
+	rm -f paslib.o hra2017-cli json.o
